<?xml version="1.0"?>
<package>
  <name>deep_rgbd_utils</name>
  <version>0.0.0</version>
  <description>The deep_rgbd_utils package</description>

  <maintainer email="venkatraman@cmu.edu">Venkatraman Narayanan</maintainer>

  <license>BSD</license>

  <buildtool_depend>catkin</buildtool_depend>

  <!-- Dependencies needed to compile this package. -->
  <build_depend>cv_bridge</build_depend>
  <build_depend>kinect_sim</build_depend>
  <build_depend>perception_utils</build_depend>
  <build_depend>pcl_ros</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>roslib</build_depend>
  <build_depend>libpcl-all-dev</build_depend>
  <build_depend>tensorflow_ros</build_depend>

  <!-- Dependencies needed after this package is compiled. -->
  <run_depend>cv_bridge</run_depend>
  <run_depend>kinect_sim</run_depend>
  <run_depend>perception_utils</run_depend>
  <run_depend>pcl_ros</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>roslib</run_depend>
  <run_depend>libpcl-all</run_depend>
  <run_depend>libpcl-all-dev</run_depend>
  <run_depend>tensorflow_ros</run_depend>

  <!-- The export tag contains other, unspecified, tags -->
  <export>
    <!-- Other tools can request additional information be placed here -->
    <cpp lflags="-Wl,-rpath,${prefix}/lib -L${prefix}/lib -llov_tensorflow" cflags="-I${prefix}/include -O3 -DROS"/>

  </export>
</package>
